[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-robohat"
version = "v0.5.0"
description = "Robohatlib"
readme = "README.md"
authors = [
    "Arnoud Denker <a.denker@vu.nl>",
    "Aart Stuurman <aartstuurman@hotmail.com>",
]
repository = "https://github.com/ci-group/robohat"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "robohatlib" }]

[tool.poetry.dependencies]
python = "^3.9"
"RPi.GPIO" = "^0.7.1"
spidev = "^3.6"

[tool.poetry.extras]
dev = []
